<resources>
    <string name="app_name">Calculadora</string>
    <string name="str_ac">AC</string>
    <string name="str_pstneg">+/-</string>
    <string name="str_perc">%</string>
    <string name="str_div">/</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_multi">x</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_menos">-</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_mas">+</string>
    <string name="str_0">0</string>
    <string name="str_coma">,</string>
    <string name="str_igual">=</string>
    <string name="str_c">c</string>
</resources>
